force-app/main/default/objects/Store_Inspection_Report__c/Store_Inspection_Report__c.object-meta.xml
<CustomObject>
    <label>Store &amp; Inspection Report</label>
    <nameField>
        <displayFormat>S&amp;IR-{YYYY}{MM}{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store &amp; Inspection Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>