force-app/main/default/objects/Store_Inspection_Report__c/fields/Have_Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>Have_Inspection_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>根据当月时间维度筛选是否有巡店日报，值为Yes或No，或者True、False（巡店日报表，巡店日报状态需要为submitted状态）</description>
    <label>Have Inspection Report</label>
    <type>Checkbox</type>
</CustomField>