force-app/main/default/objects/Store_Inspection_Report__c/fields/Have_Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Have_Responsible_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否有巡店员，值为Yes或No，或者True、False（包含巡店员、backup floorwalker）(门店负责人表，巡店员账号需要为active状态)</description>
    <label>Have Responsible Person</label>
    <type>Checkbox</type>
</CustomField>