force-app/main/default/objects/Store_Inspection_Report__c/fields/Responsible_Person_Number__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person_Number__c</fullName>
    <description>巡店员人数（巡店日报表，根据该门店下的3月所有巡店日报数据，最后去重计算，巡店日报状态需要为submitted状态）</description>
    <label>Responsible Person Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>