force-app/main/default/objects/Store_Inspection_Report__c/fields/Ticket_No_Resloved_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_No_Resloved_Number__c</fullName>
    <description>Tickets表，计算3月份该门店ticket 状态为open，due date日期小于当前日期的工单数，巡店日报状态需要为submitted状态</description>
    <label>Ticket No Resloved Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>