force-app/main/default/objects/Store_Inspection_Report__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>Tickets表，计算3月份该门店在巡店报告下面创建的所有工单数据，巡店日报状态需要为submitted状态</description>
    <label>Ticket Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>