force-app/main/default/objects/Store_Inspection_Report__c/fields/Ticket_Resloved_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Resloved_Number__c</fullName>
    <description>Tickets表，计算3月份该门店ticket 状态为Closed、Resloved的工单数量，巡店日报状态需要为submitted状态</description>
    <label>Ticket Resloved Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>