force-app/main/default/objects/Store_Inspection_Report__c/fields/Tikect_Closed_loop_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tikect_Closed_loop_Rate__c</fullName>
    <formula>IF(Ticket_Number__c != 0, Ticket_Resloved_Number__c /  Ticket_Number__c, null)</formula>
    <label>Tikect Closed-loop Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>